--- a/style.css
+++ b/style.css
@@ -1,13 +1,171 @@
-*, *::before, *::after {
-	padding: 0;
-	margin: 0;
-	box-sizing: border-box;
+:root {
+  --black-color: hsl(0, 0%, 0%);
+  --white-color: hsl(0, 0%, 100%);
+  --red-color: hsl(1, 90%, 64%);
+  --blue-color: hsl(219, 85%, 26%);
+  --snow-color: hsl(210, 60%, 98%);
+  --light-grey-blue-1-color: hsl(211, 68%, 94%);
+  --light-grey-blue-2-color: hsl(205, 33%, 90%);
+  --grey-blue-color: hsl(219, 14%, 63%);
+  --dark-grey-blue-color: hsl(219, 12%, 42%);
+  --extra-dark-blue-color: hsl(224, 21%, 14%);
+}
+
+*,
+*::before,
+*::after {
+  padding: 0;
+  margin: 0;
+  box-sizing: border-box;
 }
 
 html {
-	font-size: 62.5%;	
+  font-size: 62.5%;
 }
 
 ul {
-	list-style-type: none;
+  list-style-type: none;
+}
+
+body {
+  font-size: 1.4rem;
+  min-height: 100vh;
+}
+
+button {
+  cursor: pointer;
+}
+
+img {
+  display: block;
+}
+
+.notifs {
+  width: 37.5rem;
+}
+
+/* Notifications Header */
+.notifs__header {
+  display: flex;
+  padding: 2.4rem 1.6rem 0;
+  justify-content: space-between;
+  margin-bottom: 2.4rem;
+}
+
+.notifs__header-info {
+  display: flex;
+}
+
+.notifs__title {
+  font-size: 2rem;
+  line-height: 1.25;
+  font-weight: 800;
+  margin-right: 0.9rem;
+}
+
+.notifs__count {
+  font-weight: 800;
+  font-size: 1.6rem;
+  line-height: 1.5;
+  color: var(--white-color);
+  background-color: var(--blue-color);
+  padding: 0.1rem 1rem;
+  border-radius: 0.6rem;
+}
+
+.notifs__mark-read-button {
+  padding: 0;
+  border: none;
+  background-color: transparent;
+  color: var(--dark-grey-blue-color);
+}
+
+/* Notification */
+
+.notifs__list {
+  padding-left: 1.6rem;
+  padding-right: 1.6rem;
+  display: flex;
+  flex-direction: column;
+  gap: 1rem;
+}
+
+.notif {
+  display: flex;
+  padding: 1.6rem;
+  gap: 1.3rem;
+}
+
+.notif--unread {
+  background-color: var(--snow-color);
+}
+
+.notif--unread .notif__desc::after {
+  content: "";
+	display: inline-block;
+  height: 0.8rem;
+  width: 0.8rem;
+  background-color: var(--red-color);
+  border-radius: 50%;
+	margin-left: 0.6rem;
+}
+
+.notif--message {
+  display: grid;
+  grid-template-columns: 4rem 1fr;
+}
+
+.notif__avatar {
+  height: 4rem;
+  width: 4rem;
+}
+
+.notif__info {
+  line-height: 1.3;
+  color: var(--dark-grey-blue-color);
+}
+
+.notif__message {
+  grid-column: 2 / 3;
+  padding: 1.6rem;
+  border: 0.1rem solid var(--light-grey-blue-2-color);
+  color: var(--dark-grey-blue-color);
+  border-radius: 0.5rem;
+}
+
+.notif__post {
+  color: var(--dark-grey-blue-color);
+  font-weight: 700;
+}
+
+.notif__group {
+  color: var(--blue-color);
+  font-weight: 700;
+}
+
+.notif__desc {
+  margin-bottom: 0.3rem;
+}
+
+.notif__user {
+  font-weight: 800;
+  color: var(--black-color);
+}
+
+.notif__timestamp {
+  color: var(--grey-blue-color);
+  font-weight: 500;
+}
+
+.notif__subject-image {
+  height: 4rem;
+  width: 4rem;
+}
+
+/* Footer */
+.attribution {
+  margin-top: 5rem;
+  width: 100%;
+  text-align: center;
+  font-size: 1.2rem;
 }
